# Model-Modifier

./: .gitignore  CMakeLists.txt  LICENSE  Model-Modifier.sln  README.md
.github/workflows/: ci.yml
Dependencies/glad/include/glad/: glad.h
Model-Modifier/: CMakeLists.txt  Model-Modifier.vcxproj  Model-Modifier.vcxproj.filters  imgui.ini
Model-Modifier/res/shaders/: blinnPhong.frag  cel.frag  cookTorrance.frag  gooch.frag  gourand.frag  gourand.vert  normal.frag  normal.vert  phong.frag  phong.vert
Model-Modifier/src/: ImguiSections.h  main.cpp
Model-Modifier/src/renderer/: Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Input.cpp  Input.h  SaveImage.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  Window.cpp  Window.h
Model-Modifier/src/scene/: Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Objects.cpp  Objects.h
Model-Modifier/src/scene/object/: Object.cpp  Object.h  ObjectSelect.cpp  ObjectSelect.h  Objects.cpp  Objects.h
Model-Modifier/src/scene/object/util/: PlaneProjection.h  Triangulate.h
Model-Modifier/src/scene/surface/: Surface.cpp  Surface.h  Surface_CatmullClark.cpp  Surface_DooSabin.cpp  Surface_GarlandHeckbert.cpp  Surface_LiuRahimzadehZordan.cpp  Surface_Loop.cpp
Model-Modifier/src/scene/util/: OrderVertices.cpp  OrderVertices.h  PlaneProjection.cpp  PlaneProjection.h  Triangulate.cpp  Triangulate.h
