set(PROJECT_NAME Model-Modifier)

################################################################################
# Source groups
################################################################################
set(no_group_source_files
    "src/ImguiSections.h"
)
source_group("" FILES ${no_group_source_files})

set(Header_Files
    "src/external/glm/common.hpp"
    "src/external/glm/detail/_features.hpp"
    "src/external/glm/detail/_fixes.hpp"
    "src/external/glm/detail/_noise.hpp"
    "src/external/glm/detail/_swizzle.hpp"
    "src/external/glm/detail/_swizzle_func.hpp"
    "src/external/glm/detail/_vectorize.hpp"
    "src/external/glm/detail/compute_common.hpp"
    "src/external/glm/detail/compute_vector_relational.hpp"
    "src/external/glm/detail/func_common.inl"
    "src/external/glm/detail/func_common_simd.inl"
    "src/external/glm/detail/func_exponential.inl"
    "src/external/glm/detail/func_exponential_simd.inl"
    "src/external/glm/detail/func_geometric.inl"
    "src/external/glm/detail/func_geometric_simd.inl"
    "src/external/glm/detail/func_integer.inl"
    "src/external/glm/detail/func_integer_simd.inl"
    "src/external/glm/detail/func_matrix.inl"
    "src/external/glm/detail/func_matrix_simd.inl"
    "src/external/glm/detail/func_packing.inl"
    "src/external/glm/detail/func_packing_simd.inl"
    "src/external/glm/detail/func_trigonometric.inl"
    "src/external/glm/detail/func_trigonometric_simd.inl"
    "src/external/glm/detail/func_vector_relational.inl"
    "src/external/glm/detail/func_vector_relational_simd.inl"
    "src/external/glm/detail/qualifier.hpp"
    "src/external/glm/detail/setup.hpp"
    "src/external/glm/detail/type_float.hpp"
    "src/external/glm/detail/type_half.hpp"
    "src/external/glm/detail/type_half.inl"
    "src/external/glm/detail/type_mat2x2.hpp"
    "src/external/glm/detail/type_mat2x2.inl"
    "src/external/glm/detail/type_mat2x3.hpp"
    "src/external/glm/detail/type_mat2x3.inl"
    "src/external/glm/detail/type_mat2x4.hpp"
    "src/external/glm/detail/type_mat2x4.inl"
    "src/external/glm/detail/type_mat3x2.hpp"
    "src/external/glm/detail/type_mat3x2.inl"
    "src/external/glm/detail/type_mat3x3.hpp"
    "src/external/glm/detail/type_mat3x3.inl"
    "src/external/glm/detail/type_mat3x4.hpp"
    "src/external/glm/detail/type_mat3x4.inl"
    "src/external/glm/detail/type_mat4x2.hpp"
    "src/external/glm/detail/type_mat4x2.inl"
    "src/external/glm/detail/type_mat4x3.hpp"
    "src/external/glm/detail/type_mat4x3.inl"
    "src/external/glm/detail/type_mat4x4.hpp"
    "src/external/glm/detail/type_mat4x4.inl"
    "src/external/glm/detail/type_mat4x4_simd.inl"
    "src/external/glm/detail/type_quat.hpp"
    "src/external/glm/detail/type_quat.inl"
    "src/external/glm/detail/type_quat_simd.inl"
    "src/external/glm/detail/type_vec1.hpp"
    "src/external/glm/detail/type_vec1.inl"
    "src/external/glm/detail/type_vec2.hpp"
    "src/external/glm/detail/type_vec2.inl"
    "src/external/glm/detail/type_vec3.hpp"
    "src/external/glm/detail/type_vec3.inl"
    "src/external/glm/detail/type_vec4.hpp"
    "src/external/glm/detail/type_vec4.inl"
    "src/external/glm/detail/type_vec4_simd.inl"
    "src/external/glm/exponential.hpp"
    "src/external/glm/ext.hpp"
    "src/external/glm/ext/matrix_clip_space.hpp"
    "src/external/glm/ext/matrix_clip_space.inl"
    "src/external/glm/ext/matrix_common.hpp"
    "src/external/glm/ext/matrix_common.inl"
    "src/external/glm/ext/matrix_double2x2.hpp"
    "src/external/glm/ext/matrix_double2x2_precision.hpp"
    "src/external/glm/ext/matrix_double2x3.hpp"
    "src/external/glm/ext/matrix_double2x3_precision.hpp"
    "src/external/glm/ext/matrix_double2x4.hpp"
    "src/external/glm/ext/matrix_double2x4_precision.hpp"
    "src/external/glm/ext/matrix_double3x2.hpp"
    "src/external/glm/ext/matrix_double3x2_precision.hpp"
    "src/external/glm/ext/matrix_double3x3.hpp"
    "src/external/glm/ext/matrix_double3x3_precision.hpp"
    "src/external/glm/ext/matrix_double3x4.hpp"
    "src/external/glm/ext/matrix_double3x4_precision.hpp"
    "src/external/glm/ext/matrix_double4x2.hpp"
    "src/external/glm/ext/matrix_double4x2_precision.hpp"
    "src/external/glm/ext/matrix_double4x3.hpp"
    "src/external/glm/ext/matrix_double4x3_precision.hpp"
    "src/external/glm/ext/matrix_double4x4.hpp"
    "src/external/glm/ext/matrix_double4x4_precision.hpp"
    "src/external/glm/ext/matrix_float2x2.hpp"
    "src/external/glm/ext/matrix_float2x2_precision.hpp"
    "src/external/glm/ext/matrix_float2x3.hpp"
    "src/external/glm/ext/matrix_float2x3_precision.hpp"
    "src/external/glm/ext/matrix_float2x4.hpp"
    "src/external/glm/ext/matrix_float2x4_precision.hpp"
    "src/external/glm/ext/matrix_float3x2.hpp"
    "src/external/glm/ext/matrix_float3x2_precision.hpp"
    "src/external/glm/ext/matrix_float3x3.hpp"
    "src/external/glm/ext/matrix_float3x3_precision.hpp"
    "src/external/glm/ext/matrix_float3x4.hpp"
    "src/external/glm/ext/matrix_float3x4_precision.hpp"
    "src/external/glm/ext/matrix_float4x2.hpp"
    "src/external/glm/ext/matrix_float4x2_precision.hpp"
    "src/external/glm/ext/matrix_float4x3.hpp"
    "src/external/glm/ext/matrix_float4x3_precision.hpp"
    "src/external/glm/ext/matrix_float4x4.hpp"
    "src/external/glm/ext/matrix_float4x4_precision.hpp"
    "src/external/glm/ext/matrix_int2x2.hpp"
    "src/external/glm/ext/matrix_int2x2_sized.hpp"
    "src/external/glm/ext/matrix_int2x3.hpp"
    "src/external/glm/ext/matrix_int2x3_sized.hpp"
    "src/external/glm/ext/matrix_int2x4.hpp"
    "src/external/glm/ext/matrix_int2x4_sized.hpp"
    "src/external/glm/ext/matrix_int3x2.hpp"
    "src/external/glm/ext/matrix_int3x2_sized.hpp"
    "src/external/glm/ext/matrix_int3x3.hpp"
    "src/external/glm/ext/matrix_int3x3_sized.hpp"
    "src/external/glm/ext/matrix_int3x4.hpp"
    "src/external/glm/ext/matrix_int3x4_sized.hpp"
    "src/external/glm/ext/matrix_int4x2.hpp"
    "src/external/glm/ext/matrix_int4x2_sized.hpp"
    "src/external/glm/ext/matrix_int4x3.hpp"
    "src/external/glm/ext/matrix_int4x3_sized.hpp"
    "src/external/glm/ext/matrix_int4x4.hpp"
    "src/external/glm/ext/matrix_int4x4_sized.hpp"
    "src/external/glm/ext/matrix_projection.hpp"
    "src/external/glm/ext/matrix_projection.inl"
    "src/external/glm/ext/matrix_relational.hpp"
    "src/external/glm/ext/matrix_relational.inl"
    "src/external/glm/ext/matrix_transform.hpp"
    "src/external/glm/ext/matrix_transform.inl"
    "src/external/glm/ext/matrix_uint2x2.hpp"
    "src/external/glm/ext/matrix_uint2x2_sized.hpp"
    "src/external/glm/ext/matrix_uint2x3.hpp"
    "src/external/glm/ext/matrix_uint2x3_sized.hpp"
    "src/external/glm/ext/matrix_uint2x4.hpp"
    "src/external/glm/ext/matrix_uint2x4_sized.hpp"
    "src/external/glm/ext/matrix_uint3x2.hpp"
    "src/external/glm/ext/matrix_uint3x2_sized.hpp"
    "src/external/glm/ext/matrix_uint3x3.hpp"
    "src/external/glm/ext/matrix_uint3x3_sized.hpp"
    "src/external/glm/ext/matrix_uint3x4.hpp"
    "src/external/glm/ext/matrix_uint3x4_sized.hpp"
    "src/external/glm/ext/matrix_uint4x2.hpp"
    "src/external/glm/ext/matrix_uint4x2_sized.hpp"
    "src/external/glm/ext/matrix_uint4x3.hpp"
    "src/external/glm/ext/matrix_uint4x3_sized.hpp"
    "src/external/glm/ext/matrix_uint4x4.hpp"
    "src/external/glm/ext/matrix_uint4x4_sized.hpp"
    "src/external/glm/ext/quaternion_common.hpp"
    "src/external/glm/ext/quaternion_common.inl"
    "src/external/glm/ext/quaternion_common_simd.inl"
    "src/external/glm/ext/quaternion_double.hpp"
    "src/external/glm/ext/quaternion_double_precision.hpp"
    "src/external/glm/ext/quaternion_exponential.hpp"
    "src/external/glm/ext/quaternion_exponential.inl"
    "src/external/glm/ext/quaternion_float.hpp"
    "src/external/glm/ext/quaternion_float_precision.hpp"
    "src/external/glm/ext/quaternion_geometric.hpp"
    "src/external/glm/ext/quaternion_geometric.inl"
    "src/external/glm/ext/quaternion_relational.hpp"
    "src/external/glm/ext/quaternion_relational.inl"
    "src/external/glm/ext/quaternion_transform.hpp"
    "src/external/glm/ext/quaternion_transform.inl"
    "src/external/glm/ext/quaternion_trigonometric.hpp"
    "src/external/glm/ext/quaternion_trigonometric.inl"
    "src/external/glm/ext/scalar_common.hpp"
    "src/external/glm/ext/scalar_common.inl"
    "src/external/glm/ext/scalar_constants.hpp"
    "src/external/glm/ext/scalar_constants.inl"
    "src/external/glm/ext/scalar_int_sized.hpp"
    "src/external/glm/ext/scalar_integer.hpp"
    "src/external/glm/ext/scalar_integer.inl"
    "src/external/glm/ext/scalar_packing.hpp"
    "src/external/glm/ext/scalar_packing.inl"
    "src/external/glm/ext/scalar_relational.hpp"
    "src/external/glm/ext/scalar_relational.inl"
    "src/external/glm/ext/scalar_uint_sized.hpp"
    "src/external/glm/ext/scalar_ulp.hpp"
    "src/external/glm/ext/scalar_ulp.inl"
    "src/external/glm/ext/vector_bool1.hpp"
    "src/external/glm/ext/vector_bool1_precision.hpp"
    "src/external/glm/ext/vector_bool2.hpp"
    "src/external/glm/ext/vector_bool2_precision.hpp"
    "src/external/glm/ext/vector_bool3.hpp"
    "src/external/glm/ext/vector_bool3_precision.hpp"
    "src/external/glm/ext/vector_bool4.hpp"
    "src/external/glm/ext/vector_bool4_precision.hpp"
    "src/external/glm/ext/vector_common.hpp"
    "src/external/glm/ext/vector_common.inl"
    "src/external/glm/ext/vector_double1.hpp"
    "src/external/glm/ext/vector_double1_precision.hpp"
    "src/external/glm/ext/vector_double2.hpp"
    "src/external/glm/ext/vector_double2_precision.hpp"
    "src/external/glm/ext/vector_double3.hpp"
    "src/external/glm/ext/vector_double3_precision.hpp"
    "src/external/glm/ext/vector_double4.hpp"
    "src/external/glm/ext/vector_double4_precision.hpp"
    "src/external/glm/ext/vector_float1.hpp"
    "src/external/glm/ext/vector_float1_precision.hpp"
    "src/external/glm/ext/vector_float2.hpp"
    "src/external/glm/ext/vector_float2_precision.hpp"
    "src/external/glm/ext/vector_float3.hpp"
    "src/external/glm/ext/vector_float3_precision.hpp"
    "src/external/glm/ext/vector_float4.hpp"
    "src/external/glm/ext/vector_float4_precision.hpp"
    "src/external/glm/ext/vector_int1.hpp"
    "src/external/glm/ext/vector_int1_sized.hpp"
    "src/external/glm/ext/vector_int2.hpp"
    "src/external/glm/ext/vector_int2_sized.hpp"
    "src/external/glm/ext/vector_int3.hpp"
    "src/external/glm/ext/vector_int3_sized.hpp"
    "src/external/glm/ext/vector_int4.hpp"
    "src/external/glm/ext/vector_int4_sized.hpp"
    "src/external/glm/ext/vector_integer.hpp"
    "src/external/glm/ext/vector_integer.inl"
    "src/external/glm/ext/vector_packing.hpp"
    "src/external/glm/ext/vector_packing.inl"
    "src/external/glm/ext/vector_relational.hpp"
    "src/external/glm/ext/vector_relational.inl"
    "src/external/glm/ext/vector_uint1.hpp"
    "src/external/glm/ext/vector_uint1_sized.hpp"
    "src/external/glm/ext/vector_uint2.hpp"
    "src/external/glm/ext/vector_uint2_sized.hpp"
    "src/external/glm/ext/vector_uint3.hpp"
    "src/external/glm/ext/vector_uint3_sized.hpp"
    "src/external/glm/ext/vector_uint4.hpp"
    "src/external/glm/ext/vector_uint4_sized.hpp"
    "src/external/glm/ext/vector_ulp.hpp"
    "src/external/glm/ext/vector_ulp.inl"
    "src/external/glm/fwd.hpp"
    "src/external/glm/geometric.hpp"
    "src/external/glm/glm.hpp"
    "src/external/glm/gtc/bitfield.hpp"
    "src/external/glm/gtc/bitfield.inl"
    "src/external/glm/gtc/color_space.hpp"
    "src/external/glm/gtc/color_space.inl"
    "src/external/glm/gtc/constants.hpp"
    "src/external/glm/gtc/constants.inl"
    "src/external/glm/gtc/epsilon.hpp"
    "src/external/glm/gtc/epsilon.inl"
    "src/external/glm/gtc/integer.hpp"
    "src/external/glm/gtc/integer.inl"
    "src/external/glm/gtc/matrix_access.hpp"
    "src/external/glm/gtc/matrix_access.inl"
    "src/external/glm/gtc/matrix_integer.hpp"
    "src/external/glm/gtc/matrix_inverse.hpp"
    "src/external/glm/gtc/matrix_inverse.inl"
    "src/external/glm/gtc/matrix_transform.hpp"
    "src/external/glm/gtc/matrix_transform.inl"
    "src/external/glm/gtc/noise.hpp"
    "src/external/glm/gtc/noise.inl"
    "src/external/glm/gtc/packing.hpp"
    "src/external/glm/gtc/packing.inl"
    "src/external/glm/gtc/quaternion.hpp"
    "src/external/glm/gtc/quaternion.inl"
    "src/external/glm/gtc/quaternion_simd.inl"
    "src/external/glm/gtc/random.hpp"
    "src/external/glm/gtc/random.inl"
    "src/external/glm/gtc/reciprocal.hpp"
    "src/external/glm/gtc/reciprocal.inl"
    "src/external/glm/gtc/round.hpp"
    "src/external/glm/gtc/round.inl"
    "src/external/glm/gtc/type_aligned.hpp"
    "src/external/glm/gtc/type_precision.hpp"
    "src/external/glm/gtc/type_precision.inl"
    "src/external/glm/gtc/type_ptr.hpp"
    "src/external/glm/gtc/type_ptr.inl"
    "src/external/glm/gtc/ulp.hpp"
    "src/external/glm/gtc/ulp.inl"
    "src/external/glm/gtc/vec1.hpp"
    "src/external/glm/gtx/associated_min_max.hpp"
    "src/external/glm/gtx/associated_min_max.inl"
    "src/external/glm/gtx/bit.hpp"
    "src/external/glm/gtx/bit.inl"
    "src/external/glm/gtx/closest_point.hpp"
    "src/external/glm/gtx/closest_point.inl"
    "src/external/glm/gtx/color_encoding.hpp"
    "src/external/glm/gtx/color_encoding.inl"
    "src/external/glm/gtx/color_space.hpp"
    "src/external/glm/gtx/color_space.inl"
    "src/external/glm/gtx/color_space_YCoCg.hpp"
    "src/external/glm/gtx/color_space_YCoCg.inl"
    "src/external/glm/gtx/common.hpp"
    "src/external/glm/gtx/common.inl"
    "src/external/glm/gtx/compatibility.hpp"
    "src/external/glm/gtx/compatibility.inl"
    "src/external/glm/gtx/component_wise.hpp"
    "src/external/glm/gtx/component_wise.inl"
    "src/external/glm/gtx/dual_quaternion.hpp"
    "src/external/glm/gtx/dual_quaternion.inl"
    "src/external/glm/gtx/easing.hpp"
    "src/external/glm/gtx/easing.inl"
    "src/external/glm/gtx/euler_angles.hpp"
    "src/external/glm/gtx/euler_angles.inl"
    "src/external/glm/gtx/extend.hpp"
    "src/external/glm/gtx/extend.inl"
    "src/external/glm/gtx/extended_min_max.hpp"
    "src/external/glm/gtx/extended_min_max.inl"
    "src/external/glm/gtx/exterior_product.hpp"
    "src/external/glm/gtx/exterior_product.inl"
    "src/external/glm/gtx/fast_exponential.hpp"
    "src/external/glm/gtx/fast_exponential.inl"
    "src/external/glm/gtx/fast_square_root.hpp"
    "src/external/glm/gtx/fast_square_root.inl"
    "src/external/glm/gtx/fast_trigonometry.hpp"
    "src/external/glm/gtx/fast_trigonometry.inl"
    "src/external/glm/gtx/float_notmalize.inl"
    "src/external/glm/gtx/functions.hpp"
    "src/external/glm/gtx/functions.inl"
    "src/external/glm/gtx/gradient_paint.hpp"
    "src/external/glm/gtx/gradient_paint.inl"
    "src/external/glm/gtx/handed_coordinate_space.hpp"
    "src/external/glm/gtx/handed_coordinate_space.inl"
    "src/external/glm/gtx/hash.hpp"
    "src/external/glm/gtx/hash.inl"
    "src/external/glm/gtx/integer.hpp"
    "src/external/glm/gtx/integer.inl"
    "src/external/glm/gtx/intersect.hpp"
    "src/external/glm/gtx/intersect.inl"
    "src/external/glm/gtx/io.hpp"
    "src/external/glm/gtx/io.inl"
    "src/external/glm/gtx/log_base.hpp"
    "src/external/glm/gtx/log_base.inl"
    "src/external/glm/gtx/matrix_cross_product.hpp"
    "src/external/glm/gtx/matrix_cross_product.inl"
    "src/external/glm/gtx/matrix_decompose.hpp"
    "src/external/glm/gtx/matrix_decompose.inl"
    "src/external/glm/gtx/matrix_factorisation.hpp"
    "src/external/glm/gtx/matrix_factorisation.inl"
    "src/external/glm/gtx/matrix_interpolation.hpp"
    "src/external/glm/gtx/matrix_interpolation.inl"
    "src/external/glm/gtx/matrix_major_storage.hpp"
    "src/external/glm/gtx/matrix_major_storage.inl"
    "src/external/glm/gtx/matrix_operation.hpp"
    "src/external/glm/gtx/matrix_operation.inl"
    "src/external/glm/gtx/matrix_query.hpp"
    "src/external/glm/gtx/matrix_query.inl"
    "src/external/glm/gtx/matrix_transform_2d.hpp"
    "src/external/glm/gtx/matrix_transform_2d.inl"
    "src/external/glm/gtx/mixed_product.hpp"
    "src/external/glm/gtx/mixed_product.inl"
    "src/external/glm/gtx/norm.hpp"
    "src/external/glm/gtx/norm.inl"
    "src/external/glm/gtx/normal.hpp"
    "src/external/glm/gtx/normal.inl"
    "src/external/glm/gtx/normalize_dot.hpp"
    "src/external/glm/gtx/normalize_dot.inl"
    "src/external/glm/gtx/number_precision.hpp"
    "src/external/glm/gtx/number_precision.inl"
    "src/external/glm/gtx/optimum_pow.hpp"
    "src/external/glm/gtx/optimum_pow.inl"
    "src/external/glm/gtx/orthonormalize.hpp"
    "src/external/glm/gtx/orthonormalize.inl"
    "src/external/glm/gtx/perpendicular.hpp"
    "src/external/glm/gtx/perpendicular.inl"
    "src/external/glm/gtx/polar_coordinates.hpp"
    "src/external/glm/gtx/polar_coordinates.inl"
    "src/external/glm/gtx/projection.hpp"
    "src/external/glm/gtx/projection.inl"
    "src/external/glm/gtx/quaternion.hpp"
    "src/external/glm/gtx/quaternion.inl"
    "src/external/glm/gtx/range.hpp"
    "src/external/glm/gtx/raw_data.hpp"
    "src/external/glm/gtx/raw_data.inl"
    "src/external/glm/gtx/rotate_normalized_axis.hpp"
    "src/external/glm/gtx/rotate_normalized_axis.inl"
    "src/external/glm/gtx/rotate_vector.hpp"
    "src/external/glm/gtx/rotate_vector.inl"
    "src/external/glm/gtx/scalar_multiplication.hpp"
    "src/external/glm/gtx/scalar_relational.hpp"
    "src/external/glm/gtx/scalar_relational.inl"
    "src/external/glm/gtx/spline.hpp"
    "src/external/glm/gtx/spline.inl"
    "src/external/glm/gtx/std_based_type.hpp"
    "src/external/glm/gtx/std_based_type.inl"
    "src/external/glm/gtx/string_cast.hpp"
    "src/external/glm/gtx/string_cast.inl"
    "src/external/glm/gtx/texture.hpp"
    "src/external/glm/gtx/texture.inl"
    "src/external/glm/gtx/transform.hpp"
    "src/external/glm/gtx/transform.inl"
    "src/external/glm/gtx/transform2.hpp"
    "src/external/glm/gtx/transform2.inl"
    "src/external/glm/gtx/type_aligned.hpp"
    "src/external/glm/gtx/type_aligned.inl"
    "src/external/glm/gtx/type_trait.hpp"
    "src/external/glm/gtx/type_trait.inl"
    "src/external/glm/gtx/vec_swizzle.hpp"
    "src/external/glm/gtx/vector_angle.hpp"
    "src/external/glm/gtx/vector_angle.inl"
    "src/external/glm/gtx/vector_query.hpp"
    "src/external/glm/gtx/vector_query.inl"
    "src/external/glm/gtx/wrap.hpp"
    "src/external/glm/gtx/wrap.inl"
    "src/external/glm/integer.hpp"
    "src/external/glm/mat2x2.hpp"
    "src/external/glm/mat2x3.hpp"
    "src/external/glm/mat2x4.hpp"
    "src/external/glm/mat3x2.hpp"
    "src/external/glm/mat3x3.hpp"
    "src/external/glm/mat3x4.hpp"
    "src/external/glm/mat4x2.hpp"
    "src/external/glm/mat4x3.hpp"
    "src/external/glm/mat4x4.hpp"
    "src/external/glm/matrix.hpp"
    "src/external/glm/packing.hpp"
    "src/external/glm/simd/common.h"
    "src/external/glm/simd/exponential.h"
    "src/external/glm/simd/geometric.h"
    "src/external/glm/simd/integer.h"
    "src/external/glm/simd/matrix.h"
    "src/external/glm/simd/neon.h"
    "src/external/glm/simd/packing.h"
    "src/external/glm/simd/platform.h"
    "src/external/glm/simd/trigonometric.h"
    "src/external/glm/simd/vector_relational.h"
    "src/external/glm/trigonometric.hpp"
    "src/external/glm/vec2.hpp"
    "src/external/glm/vec3.hpp"
    "src/external/glm/vec4.hpp"
    "src/external/glm/vector_relational.hpp"
    "src/external/imgui/imconfig.h"
    "src/external/imgui/imgui.h"
    "src/external/imgui/imgui_impl_glfw.h"
    "src/external/imgui/imgui_impl_opengl3.h"
    "src/external/imgui/imgui_impl_opengl3_loader.h"
    "src/external/imgui/imgui_internal.h"
    "src/external/imgui/imstb_rectpack.h"
    "src/external/imgui/imstb_textedit.h"
    "src/external/imgui/imstb_truetype.h"
    "src/external/stb/stb_image_write.h"
    "src/renderer/Camera.h"
    "src/renderer/IndexBuffer.h"
    "src/renderer/Input.h"
    "src/renderer/SaveImage.h"
    "src/renderer/Shader.h"
    "src/renderer/VertexArray.h"
    "src/renderer/VertexBuffer.h"
    "src/renderer/VertexBufferLayout.h"
    "src/renderer/Window.h"
    "src/scene/Light.h"
    "src/scene/Material.h"
    "src/scene/Mesh.h"
    "src/scene/object/Object.h"
    "src/scene/object/ObjectSelect.h"
    "src/scene/surface/Surface.h"
    "src/scene/util/OrderVertices.h"
    "src/scene/util/PlaneProjection.h"
    "src/scene/util/Triangulate.h"
)
source_group("Header Files" FILES ${Header_Files})

set(Source_Files
    "src/external/glad/glad.c"
    "src/external/imgui/imgui.cpp"
    "src/external/imgui/imgui_demo.cpp"
    "src/external/imgui/imgui_draw.cpp"
    "src/external/imgui/imgui_impl_glfw.cpp"
    "src/external/imgui/imgui_impl_opengl3.cpp"
    "src/external/imgui/imgui_tables.cpp"
    "src/external/imgui/imgui_widgets.cpp"
    "src/external/stb/stb_image_write.cpp"
    "src/main.cpp"
    "src/renderer/Camera.cpp"
    "src/renderer/IndexBuffer.cpp"
    "src/renderer/Input.cpp"
    "src/renderer/Shader.cpp"
    "src/renderer/VertexArray.cpp"
    "src/renderer/VertexBuffer.cpp"
    "src/renderer/Window.cpp"
    "src/scene/Light.cpp"
    "src/scene/Material.cpp"
    "src/scene/Mesh.cpp"
    "src/scene/object/Object.cpp"
    "src/scene/object/ObjectSelect.cpp"
    "src/scene/surface/Surface.cpp"
    "src/scene/surface/Surface_CatmullClark.cpp"
    "src/scene/surface/Surface_DooSabin.cpp"
    "src/scene/surface/Surface_Loop.cpp"
    "src/scene/util/OrderVertices.cpp"
    "src/scene/util/PlaneProjection.cpp"
    "src/scene/util/Triangulate.cpp"
)
source_group("Source Files" FILES ${Source_Files})

set(ALL_FILES
    ${no_group_source_files}
    ${Header_Files}
    ${Source_Files}
)

################################################################################
# Target
################################################################################
add_executable(${PROJECT_NAME} ${ALL_FILES})

use_props(${PROJECT_NAME} "${CMAKE_CONFIGURATION_TYPES}" "${DEFAULT_CXX_PROPS}")
set(ROOT_NAMESPACE GeoGraphix)

set_target_properties(${PROJECT_NAME} PROPERTIES
    VS_GLOBAL_KEYWORD "Win32Proj"
)
################################################################################
# Output directory
################################################################################
set_target_properties(${PROJECT_NAME} PROPERTIES
    OUTPUT_DIRECTORY_DEBUG   "${CMAKE_SOURCE_DIR}/bin/${CMAKE_VS_PLATFORM_NAME}/$<CONFIG>/"
    OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/bin/${CMAKE_VS_PLATFORM_NAME}/$<CONFIG>/"
)

set_target_properties(${PROJECT_NAME} PROPERTIES
    INTERPROCEDURAL_OPTIMIZATION_RELEASE "TRUE"
)

################################################################################
# Include directories
################################################################################
if("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x64")
    target_include_directories(${PROJECT_NAME} PUBLIC
        "${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/glad/include;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/glfw-3.3.8.bin.WIN64/include"
    )
elseif("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x86")
    target_include_directories(${PROJECT_NAME} PUBLIC
        "${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/glad/include;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/glfw-3.3.8.bin.WIN32/include"
    )
endif()

################################################################################
# Compile definitions
################################################################################
if("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x64")
    target_compile_definitions(${PROJECT_NAME} PRIVATE
        "$<$<CONFIG:Debug>:"
            "_DEBUG"
        ">"
        "$<$<CONFIG:Release>:"
            "NDEBUG"
        ">"
        "_CONSOLE;"
        "UNICODE;"
        "_UNICODE"
    )
elseif("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x86")
    target_compile_definitions(${PROJECT_NAME} PRIVATE
        "$<$<CONFIG:Debug>:"
            "_DEBUG"
        ">"
        "$<$<CONFIG:Release>:"
            "NDEBUG"
        ">"
        "WIN32;"
        "_CONSOLE;"
        "UNICODE;"
        "_UNICODE"
    )
endif()

################################################################################
# Compile and link options
################################################################################
if(MSVC)
    target_compile_options(${PROJECT_NAME} PRIVATE
        $<$<CONFIG:Release>:
            /Oi;
            /Gy
        >
        /permissive-;
        /std:c++17;
        /sdl;
        /W3;
        ${DEFAULT_CXX_DEBUG_INFORMATION_FORMAT};
        ${DEFAULT_CXX_EXCEPTION_HANDLING}
    )

    target_link_options(${PROJECT_NAME} PRIVATE
        $<$<CONFIG:Release>:
            /OPT:REF;
            /OPT:ICF
        >
        /DEBUG;
        /SUBSYSTEM:CONSOLE
    )
endif()

################################################################################
# Dependencies
################################################################################
set(ADDITIONAL_LIBRARY_DEPENDENCIES
    "glfw3;"
    "opengl32"
)
target_link_libraries(${PROJECT_NAME} PRIVATE "${ADDITIONAL_LIBRARY_DEPENDENCIES}")

if("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x64")
    target_link_directories(${PROJECT_NAME} PRIVATE
        "${CMAKE_SOURCE_DIR}/Dependencies/glfw-3.3.8.bin.WIN64/lib-vc2022"
    )
elseif("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x86")
    target_link_directories(${PROJECT_NAME} PRIVATE
        "${CMAKE_SOURCE_DIR}/Dependencies/glfw-3.3.8.bin.WIN32/lib-vc2022"
    )
endif()

